--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\BaBel_feladat
 index.file=public/index.php
 run.as=LOCAL
-url=http://localhost:8080/BaBel_feladat/
+url=http://localhost:8080/BaBer_feladat/
